# Heaven

./: .gitignore  LICENSE  README.md  README_BEVY.md  docker-compose.yml
.claude/: settings.local.json
arena_core/: Cargo.toml  Dockerfile
arena_core/src/: main.rs
arena_core/src/agents/: agent_manager.rs  llm_agent.rs  mod.rs  scripted_agent.rs
arena_core/src/arena/: mod.rs
arena_core/src/dataset/: mod.rs
arena_core/src/game_state/: mod.rs
arena_core/src/network/: mod.rs
arena_core/src/ui/: mod.rs
arena_core/src/websocket/: mod.rs
bevy_viewer/: Cargo.toml
bevy_viewer/src/: main.rs
docker/postgres/: init.sql
godot_viewer/: Dockerfile  icon.svg.import  project.godot
godot_viewer/.godot/: global_script_class_cache.cfg
godot_viewer/.godot/editor/: Main.tscn-editstate-4a24720ee5e787dbe30abc634fa3679d.cfg  Main.tscn-folding-4a24720ee5e787dbe30abc634fa3679d.cfg  editor_layout.cfg  filesystem_cache10  project_metadata.cfg  script_editor_cache.cfg
godot_viewer/.godot/imported/: icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex  icon.svg-218a8f2b3041327d8a5756f3a245f83b.md5
godot_viewer/scenes/: Main.tscn
godot_viewer/scripts/: ArenaRenderer.gd  ArenaRenderer.gd.uid  MockData.gd  MockData.gd.uid  UIManager.gd  UIManager.gd.uid  WebSocketClient.gd  WebSocketClient.gd.uid
llm_service/: Dockerfile  main.py  requirements.txt
nocode_ui/: Dockerfile  main.py  requirements.txt
scripts/: start.sh
web_ui/: Dockerfile  package.json
web_ui/public/: index.html
web_ui/src/: App.tsx
web_ui/src/components/: Sidebar.tsx
(+1 files in other folders)
