[package]
name = "arena_core"
version = "0.1.0"
edition = "2021"
description = "Heaven AI Arena - Игровой движок для арены ИИ агентов"
authors = ["Heaven Team"]
license = "MIT"

[dependencies]
bevy = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
nalgebra = "0.32"
anyhow = "1.0"
async-trait = "0.1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[dependencies.bevy_egui]
version = "0.23"
features = ["default"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"

[[bin]]
name = "arena_core"
path = "src/main.rs" 