[package]
name = "bevy_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["default"] }
bevy_egui = { version = "0.24", features = ["default"] }
bevy-inspector-egui = "0.22"
egui_plot = "0.24"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
